--- a/DataPreprocess/querydata.ipynb
+++ b/DataPreprocess/querydata.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/psycopg2/__init__.py:144: UserWarning: The psycopg2 wheel package will be renamed from release 2.8; in order to keep installing from binary please use \"pip install psycopg2-binary\" instead. For details see: <http://initd.org/psycopg/docs/install.html#binary-install-from-pypi>.\n",
+      "  \"\"\")\n"
+     ]
+    }
+   ],
    "source": [
-    "import altair as alt\n",
+    "#import altair as alt\n",
     "import pandas as pd\n",
     "import json\n",
     "import psycopg2"
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +61,7 @@
        " '0101000020E6100000F8A80823B47E52C023F8B37557634440')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,121 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id1</th>\n",
-       "      <th>id</th>\n",
-       "      <th>type</th>\n",
-       "      <th>zipcode</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lng</th>\n",
-       "      <th>date</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Air Quality</td>\n",
-       "      <td>10023</td>\n",
-       "      <td>40.776106560588481</td>\n",
-       "      <td>-73.979744680840554</td>\n",
-       "      <td>2016-03-05</td>\n",
-       "      <td>0101000020E6100000F8A80823B47E52C023F8B3755763...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Air Quality</td>\n",
-       "      <td>11102</td>\n",
-       "      <td>40.770783368051205</td>\n",
-       "      <td>-73.933148342619205</td>\n",
-       "      <td>2016-03-05</td>\n",
-       "      <td>0101000020E61000006E77D3B3B87B52C0530A8707A962...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>13</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Air Quality</td>\n",
-       "      <td>11420</td>\n",
-       "      <td>40.672726713315853</td>\n",
-       "      <td>-73.813406236762120</td>\n",
-       "      <td>2016-03-05</td>\n",
-       "      <td>0101000020E61000005E5008D90E7452C0286BB0E81B56...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>21</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Air Quality</td>\n",
-       "      <td>10025</td>\n",
-       "      <td>40.790329719081015</td>\n",
-       "      <td>-73.967512338362368</td>\n",
-       "      <td>2016-03-05</td>\n",
-       "      <td>0101000020E61000008BEFDEB8EB7D52C0424134862965...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>23</td>\n",
-       "      <td>22</td>\n",
-       "      <td>Air Quality</td>\n",
-       "      <td>10013</td>\n",
-       "      <td>40.716758339844795</td>\n",
-       "      <td>-74.008231992789831</td>\n",
-       "      <td>2016-03-05</td>\n",
-       "      <td>0101000020E61000000CF47ADF868052C06362BEBCBE5B...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id1  id         type zipcode                 lat                  lng  \\\n",
-       "0    2   1  Air Quality   10023  40.776106560588481  -73.979744680840554   \n",
-       "1   11  10  Air Quality   11102  40.770783368051205  -73.933148342619205   \n",
-       "2   13  12  Air Quality   11420  40.672726713315853  -73.813406236762120   \n",
-       "3   21  20  Air Quality   10025  40.790329719081015  -73.967512338362368   \n",
-       "4   23  22  Air Quality   10013  40.716758339844795  -74.008231992789831   \n",
-       "\n",
-       "         date                                           geometry  \n",
-       "0  2016-03-05  0101000020E6100000F8A80823B47E52C023F8B3755763...  \n",
-       "1  2016-03-05  0101000020E61000006E77D3B3B87B52C0530A8707A962...  \n",
-       "2  2016-03-05  0101000020E61000005E5008D90E7452C0286BB0E81B56...  \n",
-       "3  2016-03-05  0101000020E61000008BEFDEB8EB7D52C0424134862965...  \n",
-       "4  2016-03-05  0101000020E61000000CF47ADF868052C06362BEBCBE5B...  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "columnname = ['id1','id','type','zipcode','lat','lng','date','geometry']\n",
     "df = pd.DataFrame(rows, columns=columnname)"
@@ -198,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +162,7 @@
        "4   10013  2016-03-05"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +183,7 @@
        "(40896, 2)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +261,7 @@
        "4   10004    140"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +299,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>date</th>\n",
-       "      <th>zipcode</th>\n",
+       "      <th>count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -436,22 +333,22 @@
        "</div>"
       ],
       "text/plain": [
-       "         date  zipcode\n",
-       "0  2013-01-01        2\n",
-       "1  2013-01-02        8\n",
-       "2  2013-01-03       20\n",
-       "3  2013-01-04       18\n",
-       "4  2013-01-05        5"
+       "         date  count\n",
+       "0  2013-01-01      2\n",
+       "1  2013-01-02      8\n",
+       "2  2013-01-03     20\n",
+       "3  2013-01-04     18\n",
+       "4  2013-01-05      5"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "casebydate = df_m.groupby(by='date', as_index=False).count()\n",
-    "casebyzip.columns = ['date','count']\n",
+    "casebydate.columns = ['date','count']\n",
     "casebydate.head()"
    ]
   },
